# referesh

./: .dockerignore  .flake8  .gitignore  Dockerfile  README.md  docker-compose.yml  fly.toml  output.xml  pyproject.toml  report.html  run-tests  schema.sql  tasks.py  test.bib
.github/workflows/: main.yml
app/: app.py  config.py  db.py  delete_reference.py  get_references.py  routes.py  save_reference.py
app/controllers/: field_controller.py  project_controller.py  reference_controller.py  testi.py
app/models/: field.py  project.py  reference.py
app/services/: export_service.py  import_service.py
app/static/: index.css  index.js
app/templates/: error.html  index.html
documentation/: DoD.md  installation.md  report.md  testing.md
malli/: LICENSE  Procfile  README.md  pyproject.toml  requirements.txt
malli/src/: app.py  config.py  initialize_database.py
malli/src/controllers/: book_controller.py  ping_controller.py  test_controller.py
malli/src/models/: book.py
malli/src/repositories/: book_repository.py
malli/src/services/: book_service.py
malli/src/templates/: index.html
malli/src/tests/repositories/: todo_repository_test.py
malli/src/tests/robot/: AppLibrary.py  add_todo.robot  delete_todo.robot  resource.robot
sql/: mock_data.sql
tests/: test_placeholder.py  utils.py
tests/robot/: DatabaseLibrary.py  ProjectLibrary.py  ReferenceLibrary.py  log.html  output.xml  report.html  robot.yaml
tests/robot/robot_tests/: back_project_controller.robot  back_reference_controller.robot  front_project_controller.robot  front_reference_controller.robot  reference_controller.robot  resource.robot
tests/unit/: test_export_service.py  test_field_controller.py  test_project_controller.py  test_reference_controller.py
